Sat Dec  8 20:52:45 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java: New createTetrahedron()
	method, to avoid assertion failure.
	* src/org/jcae/mesh/bora/xmldata/MESHReader.java: Call it when
	reading tetrahedra.
	* src/org/jcae/mesh/bora/xmldata/Storage.java
	  src/org/jcae/mesh/bora/xmldata/MESHReader.java:  Modify bora
	readers, Mesh instance is passed as an argument so that caller can
	define its traits.

Fri Dec  7 18:35:04 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/UNV2Amibe.java
	  src/org/jcae/mesh/amibe/util/UNVReader.java: Fix import of UNV files
	when there are more than 8 groups.

Tue Dec  4 10:10:19 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/MeshParameters.java: Change default value
	for org.jcae.mesh.amibe.ds.Mesh.epsilon property to 0.
	* src/org/jcae/mesh/amibe/traits/MeshTraitsBuilder.java: addNodeList()
	was unusable.
	* src/org/jcae/mesh/amibe/algos3d/SmoothNodes3D.java: Smoothing was
	not performed if MeshTraitsBuilder.addNodeList() had been called.
	* src/org/jcae/mesh/amibe/algos2d/SmoothNodes2D.java
	  src/org/jcae/mesh/amibe/algos3d/SmoothNodes3D.java: As mentioned
	in quoted paper, smoothed vertex is moved within region delimited
	by incident triangles.
	* src/org/jcae/mesh/amibe/algos2d/SmoothNodes2D.java: New 'interpolate'
	option, set to false by default because results do not seem to be
	significantly improved.  If set to true, metric used to compute
	distance is interpolated between its two endpoints, otherwise metric
	of destination point is used.
	* src/org/jcae/mesh/amibe/metrics/Metric2D.java: New inv() and
	interpolateSpecial() methods.

Mon Dec  3 23:14:23 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/SmoothNodes3D.java: Do not try to
	move boundary vertices.
	* src/org/jcae/mesh/amibe/ds/Vertex.java (getLocalQuadric): Local